--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,22 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground bg-no-repeat bg-cover;
+    background-image: url("/laptop.jpg");
+  }
+}
+
+@layer utilities {
+  .neon {
+    color: #fff;
+    text-shadow:
+            0 0 7px #fff,
+            0 0 10px #fff,
+            0 0 21px #fff,
+            0 0 42px #0051ff,
+            0 0 82px #0051ff,
+            0 0 92px #0051ff,
+            0 0 102px #0051ff,
+            0 0 151px #0051ff;
   }
 }
